# martian-sdk-python

./: .buildinfo.bak  .env.template  .gitignore  README.md  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  quickstart_guide.ipynb  search.html  searchindex.js
_modules/: index.html
_modules/martian_apart_hack_sdk/: judge_specs.html  martian_client.html
_modules/martian_apart_hack_sdk/backend_clients/: judges.html  routers.html
_modules/martian_apart_hack_sdk/models/: RouterConstraints.html
_modules/martian_apart_hack_sdk/resources/: judge.html  router.html
_sources/: installation.rst.txt
_sources/api/: index.rst.txt  judge_specs.rst.txt  routing_constraints.rst.txt
api/: index.html  judge.html  judge_specs.html  judges_client.html  martian_client.html  router.html  routers_client.html  routing_constraints.html
demo/: main.py  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/api/: judge.rst  judges_client.rst  martian_client.rst  router.rst  routers_client.rst
src/martian_apart_hack_sdk/: backend.py  exceptions.py  httpx_factory.py  judge_specs.py  martian_client.py  utils.py
src/martian_apart_hack_sdk/backend_clients/: judges.py  organization.py  routers.py
src/martian_apart_hack_sdk/models/: JudgeEvaluation.py  OrganizationBalance.py  RouterConstraints.py  RouterTrainingJob.py  judge_evaluation.py  llm_models.py  organization_balance.py  router_training_job.py
src/martian_apart_hack_sdk/resources/: judge.py  router.py
src/martian_sdk_python/: __init__.py  backend.py
src/martian_sdk_python/backend_clients/: judges.py
src/martian_sdk_python/resources/: judge.py
