[project]
name = "martian-sdk-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aleksei", email = "xechehot@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "martian_sdk_python",
]

[tool.uv.sources]
foo = { path = "./src/martian_sdk_python" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "demo",
]

