[project]
name = "mmartian_apart_hack_sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aleksei", email = "xechehot@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/martian_apart_hack_sdk"]

