[project]
name = "mmartian_apart_hack_sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aleksei", email = "xechehot@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "openai>=1.81.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/martian_apart_hack_sdk"]

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "jupyter>=1.1.1",
]

# Documentation dependencies require Python 3.12+
docs = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=3.2.0",
]
